--- a/src/ui/components/Form/TextareaField/styles.css
+++ b/src/ui/components/Form/TextareaField/styles.css
@@ -2,11 +2,13 @@
 
 .textarea {
   min-height: calc(var(--lh-m) + 2 * var(--unit));
+  border-radius: var(--radius-input);
 }
 
 .backdrop {
   background-color: var(--color-neutral-0);
   border: 1px solid currentColor;
+  border-radius: var(--radius-input);
 }
 
 textarea:focus + .backdrop {
