--- a/src/assets/css/modules/text.css
+++ b/src/assets/css/modules/text.css
@@ -3,16 +3,26 @@
 h1,
 h2,
 h3,
-h4,
-:global(.h1),
-:global(.h2),
-:global(.h3),
-:global(.h4) {
+h4 {
+  font-size: inherit;
   display: block;
   margin: 0;
   padding: 0;
-  font-weight: bold;
-  font-family: var(--ff-heading);
+  font-weight: normal;
+  font-family: inherit;
+}
+
+ul,
+p,
+ol,
+pre {
+  margin: 0;
+  padding: 0;
+}
+
+ul,
+ol {
+  list-style: none;
 }
 
 :global .ff-system {
@@ -27,32 +37,38 @@ h4,
   font-family: var(--ff-mono);
 }
 
-h4,
-:global(.fs-s),
-:global(.h4) {
-  font-size: var(--fs-s);
-  line-height: var(--lh-s);
+:global .text-title {
+  font-family: var(--ff-heading);
+  font-size: var(--fs-xxl);
+  line-height: var(--lh-xxl);
 }
 
-h3,
-:global(.fs-m),
-:global(.h3) {
-  font-size: var(--fs-m);
-  line-height: var(--lh-m);
+:global .text-heading {
+  font-family: var(--ff-heading);
+  font-size: var(--fs-xl);
+  line-height: var(--lh-xl);
 }
 
-h2,
-:global(.fs-l),
-:global(.h2) {
+:global .text-body-2 {
   font-size: var(--fs-l);
   line-height: var(--lh-l);
 }
 
-h1,
-:global(.fs-xl),
-:global(.h1) {
-  font-size: var(--fs-xl);
-  line-height: var(--lh-xl);
+:global .text-body-1 {
+  font-size: var(--fs-m);
+  line-height: var(--lh-m);
+}
+
+:global .text-caption {
+  font-size: var(--fs-s);
+  line-height: var(--lh-s);
+}
+
+:global .text-caps {
+  font-size: var(--fs-s);
+  line-height: var(--lh-m);
+  text-transform: uppercase;
+  letter-spacing: var(--px);
 }
 
 :global .lh-xl {
@@ -71,19 +87,6 @@ h1,
   line-height: var(--lh-s);
 }
 
-ul,
-p,
-ol,
-pre {
-  margin: 0;
-  padding: 0;
-}
-
-ul,
-ol {
-  list-style: none;
-}
-
 :global .list-dash {
   margin-left: 3ch;
 }
@@ -94,16 +97,22 @@ ol {
   margin-left: -3ch;
 }
 
-:global .bold {
-  font-weight: bold;
+:global .text-light {
+  font-weight: 300;
 }
-:global .regular {
+:global .text-medium {
+  font-weight: 500;
+}
+:global .text-bold {
+  font-weight: 700;
+}
+:global .text-regular {
   font-weight: normal;
 }
-:global .italic {
+:global .text-italic {
   font-style: italic;
 }
-:global .normal {
+:global .text-normal {
   font-style: normal;
 }
 
@@ -120,50 +129,60 @@ ol {
   text-align: right;
 }
 
-:global .line-through {
+:global .text-line-through {
   text-decoration: line-through;
 }
-:global .overline {
+:global .text-overline {
   text-decoration: overline;
 }
-:global .underline {
+:global .text-underline {
   text-decoration: underline;
 }
 
-:global .capitalize {
+:global .text-capitalize {
   text-transform: capitalize;
 }
-:global .lowercase {
+:global .text-lowercase {
   text-transform: lowercase;
 }
-:global .uppercase {
+:global .text-uppercase {
   text-transform: uppercase;
 }
 
-:global .pre {
+:global .text-pre {
   white-space: pre;
 }
-:global .pre-line {
+:global .text-pre-line {
   white-space: pre-line;
 }
-:global .pre-wrap {
+:global .text-pre-wrap {
   white-space: pre-wrap;
 }
-:global .nowrap {
+:global .text-nowrap {
   white-space: nowrap;
 }
 
-:global .truncate {
+:global .text-truncate {
   overflow: hidden;
   max-width: 100%;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 
-:global .valign-top {
+:global .text-valign-top {
   vertical-align: top;
 }
 
-:global .valign-bottom {
+:global .text-valign-middle {
+  vertical-align: middle;
+}
+
+:global .text-valign-bottom {
   vertical-align: bottom;
+}
+
+:global .text-reset {
+  letter-spacing: initial;
+  text-transform: initial;
+  font-weight: initial;
 }
