--- a/src/ui/components/Controls/Checkbox/styles.css
+++ b/src/ui/components/Controls/Checkbox/styles.css
@@ -10,13 +10,17 @@
   margin-right: var(--unit);
   display: inline-block;
   vertical-align: top;
+  cursor: default;
 }
+
 .icon-square {
   width: var(--lh-m);
   height: var(--lh-m);
 }
+
 .icon-square-backdrop {
-  border: 1px solid currentColor;
+  background-color: var(--color-neutral-1);
+  border: 1px solid var(--color-neutral-2);
   border-radius: var(--radius-input);
 }
 
@@ -29,28 +33,34 @@
 
 .container:hover .icon-square-backdrop,
 :global(.with-focus-ring) .checkbox:focus + .label .icon-square-backdrop {
-  top: -1px;
-  bottom: -1px;
-  left: -1px;
-  right: -1px;
-  border-width: 2px;
+  top: -2px;
+  bottom: -2px;
+  left: -2px;
+  right: -2px;
+  border: 2px solid var(--color-neutral-3);
 }
 
 .icon-square-tick {
-  transform: scale(0, 0) rotate(0deg);
-  transition-property: transform;
-  transition-duration: 100ms;
-  transition-timing-function: cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  transform: scale(0, 0) rotate(-45deg);
+  /* transition-property: transform;
+  transition-duration: 80ms;
+  transition-timing-function: linear; */
   top: calc(6 * var(--px));
   left: calc(3 * var(--px));
   height: calc(7 * var(--px));
   width: calc(18 * var(--px));
-  border-left: 2px solid currentColor;
-  border-bottom: 2px solid currentColor;
+  border-left: 2px solid var(--color-neutral-0);
+  border-bottom: 2px solid var(--color-neutral-0);
 }
 
 .checkbox:checked + .label .icon-square-tick {
   transform: scale(1, 1) rotate(-45deg);
+}
+
+.checkbox:checked + .label .icon-square-backdrop,
+:global(.with-focus-ring) .checkbox:checked:focus + .label .icon-square-backdrop {
+  background-color: var(--color-accent-1-light);
+  border-color: var(--color-accent-1-dark);
 }
 
 :global(.with-focus-ring) .container:focus-within .backdrop {
