--- a/src/ui/components/Controls/RadioButton/styles.css
+++ b/src/ui/components/Controls/RadioButton/styles.css
@@ -10,6 +10,7 @@
   margin-right: var(--unit);
   display: inline-block;
   vertical-align: top;
+  cursor: default;
 }
 .icon-circle {
   width: var(--lh-m);
@@ -17,7 +18,8 @@
 }
 .icon-circle-backdrop {
   border-radius: 50%;
-  border: 1px solid currentColor;
+  border: 1px solid var(--color-neutral-2);
+  background-color: var(--color-neutral-1);
 }
 
 .radio {
@@ -29,24 +31,29 @@
 
 .container:hover .icon-circle-backdrop,
 :global(.with-focus-ring) .radio:focus + .label .icon-circle-backdrop {
-  top: -1px;
-  bottom: -1px;
-  left: -1px;
-  right: -1px;
-  border-width: 2px;
+  top: -2px;
+  bottom: -2px;
+  left: -2px;
+  right: -2px;
+  border: 2px solid var(--color-neutral-3);
 }
 
 .icon-circle-fill {
   border-radius: 50%;
   transform: scale(0, 0);
-  transition-property: transform;
-  transition-duration: 100ms;
-  transition-timing-function: cubic-bezier(0.445, 0.05, 0.55, 0.95);
-  background-color: currentColor;
+  /* transition-property: transform;
+  transition-duration: 80ms; */
+  transition-timing-function: linear;
+  background-color: var(--color-accent-1-light);
 }
 
 .radio:checked + .label .icon-circle-fill {
   transform: scale(1, 1);
+}
+
+.container:hover .radio:checked + .label .icon-circle-backdrop,
+:global(.with-focus-ring) .radio:checked:focus + .label .icon-circle-backdrop {
+  border-color: var(--color-accent-1-dark);
 }
 
 :global(.with-focus-ring) .container:focus-within .backdrop {
