--- a/src/ui/views/Playground/styles.css
+++ b/src/ui/views/Playground/styles.css
@@ -2,7 +2,6 @@
 
 .container {
   display: grid;
-  padding: var(--box-m);
   min-width: 100vw;
   min-height: 100vh;
   grid-template-rows: auto 1fr;
@@ -13,12 +12,12 @@
 .heading {
   grid-row: 1;
   grid-column: 1/3;
-  border-bottom: 1px solid var(--color-neutral-5);
+  border-bottom: 1px solid var(--color-neutral-2);
 }
 
 .grid {
-  padding: var(--box-s);
-  background-size: 8px 8px;
-  background-image: linear-gradient(to right, color(#e83a30 a(20%)) 1px, transparent 1px),
-    linear-gradient(to bottom, color(#e83a30 a(20%)) 1px, transparent 1px);
+  top: calc(-1 * var(--box-m));
+  bottom: 0;
+  right: 0;
+  left: calc(-1 * var(--box-m));
 }
