--- a/src/ui/components/Controls/Link/styles.css
+++ b/src/ui/components/Controls/Link/styles.css
@@ -13,11 +13,15 @@
   border-bottom: 1px solid currentColor;
 }
 
+.container:global(.--hover) .backdrop,
 .container:hover .backdrop {
   bottom: -1px;
   border-bottom-width: 2px;
 }
 
+.container:global(.--focus) .backdrop,
 :global(.with-focus-ring) .container:focus .backdrop {
   background-color: var(--color-neutral-2);
+  bottom: -1px;
+  border-bottom-width: 2px;
 }
