--- a/src/ui/components/Controls/Checkbox/styles.css
+++ b/src/ui/components/Controls/Checkbox/styles.css
@@ -1,9 +1,5 @@
 @import 'assets/css/variables.css';
 
-.container {
-  margin-bottom: var(--unit);
-}
-
 .icon-container {
   width: var(--lh-m);
   height: var(--lh-m);
@@ -26,12 +22,16 @@
 
 .checkbox {
   position: absolute;
-  width: auto;
-  height: auto;
+  top: 0;
+  left: 0;
+  width: 1px;
+  height: 1px;
   opacity: 0;
 }
 
-.container:hover .icon-square-backdrop,
+.container:global(.--focus) .icon-square-backdrop,
+.container:global(.--hover) .icon-square-backdrop,
+.container:hover .checkbox:not(:disabled) + .label .icon-square-backdrop,
 :global(.with-focus-ring) .checkbox:focus + .label .icon-square-backdrop {
   top: -2px;
   bottom: -2px;
@@ -57,16 +57,22 @@
   transform: scale(1, 1) rotate(-45deg);
 }
 
+.container:hover .checkbox:checked + .label .icon-square-backdrop,
 .checkbox:checked + .label .icon-square-backdrop,
 :global(.with-focus-ring) .checkbox:checked:focus + .label .icon-square-backdrop {
   background-color: var(--color-accent-1-light);
   border-color: var(--color-accent-1-dark);
 }
 
+.container:global(.--focus) .backdrop,
 :global(.with-focus-ring) .container:focus-within .backdrop {
   background-color: var(--color-neutral-2);
   top: -1px;
   bottom: -1px;
   right: -1px;
   left: -1px;
+}
+
+.checkbox:disabled + .label {
+  opacity: 0.25;
 }
