--- a/src/ui/components/Controls/TextField/styles.css
+++ b/src/ui/components/Controls/TextField/styles.css
@@ -6,10 +6,16 @@
   border-radius: var(--radius-input);
 }
 
+:global(.--focus) input + .backdrop,
 input:focus + .backdrop {
   border: 2px solid currentColor;
   top: -1px;
   right: -1px;
   bottom: -1px;
   left: -1px;
+}
+
+input:disabled,
+input:disabled + .backdrop {
+  opacity: 0.25;
 }
