Colors, layouts, and more controls

--- a/src/ui/components/Controls/Button/styles.css
+++ b/src/ui/components/Controls/Button/styles.css
@@ -17,6 +17,10 @@
 .container:global(.--focus) .backdrop,
 :global(.with-focus-ring) .container:focus .backdrop {
   background-color: var(--color-neutral-2);
+  top: -1px;
+  bottom: -1px;
+  left: -1px;
+  right: -1px;
   border-width: 2px;
 }
 
