--- a/src/ui/components/Controls/Button/styles.css
+++ b/src/ui/components/Controls/Button/styles.css
@@ -5,8 +5,8 @@
   border-radius: var(--radius-input);
 }
 
-.container:global(.--hover):not(:disabled) .backdrop,
-.container:hover:not(:disabled) .backdrop {
+.container:hover:not(:disabled) .backdrop,
+.container:global(.--hover):not(:disabled) .backdrop {
   top: -1px;
   bottom: -1px;
   left: -1px;
@@ -14,8 +14,8 @@
   border-width: 2px;
 }
 
-.container:global(.--focus) .backdrop,
-:global(.with-focus-ring) .container:focus .backdrop {
+:global(.with-focus-ring) .container:focus .backdrop,
+.container:global(.--focus) .backdrop {
   background-color: var(--color-neutral-2);
   top: -1px;
   bottom: -1px;
@@ -25,5 +25,5 @@
 }
 
 .container:disabled {
-  opacity: 0.25;
+  opacity: 0.3;
 }
