--- a/src/ui/components/Controls/Checkbox/styles.css
+++ b/src/ui/components/Controls/Checkbox/styles.css
@@ -1,25 +1,5 @@
 @import 'assets/css/variables.css';
 
-.icon-container {
-  width: var(--lh-m);
-  height: var(--lh-m);
-  margin-right: var(--unit);
-  display: inline-block;
-  vertical-align: top;
-  cursor: default;
-}
-
-.icon-square {
-  width: var(--lh-m);
-  height: var(--lh-m);
-}
-
-.icon-square-backdrop {
-  background-color: var(--color-neutral-1);
-  border: 1px solid var(--color-neutral-2);
-  border-radius: var(--radius-input);
-}
-
 .checkbox {
   position: absolute;
   top: 0;
@@ -29,50 +9,64 @@
   opacity: 0;
 }
 
-.container:global(.--focus) .icon-square-backdrop,
-.container:global(.--hover) .icon-square-backdrop,
-.container:hover .checkbox:not(:disabled) + .label .icon-square-backdrop,
-:global(.with-focus-ring) .checkbox:focus + .label .icon-square-backdrop {
-  top: -2px;
-  bottom: -2px;
-  left: -2px;
-  right: -2px;
-  border: 2px solid var(--color-neutral-3);
+.icon {
+  color: transparent;
+  cursor: default;
+}
+.checkbox:checked + .label .icon {
+  color: var(--color-neutral-0);
 }
 
-.icon-square-tick {
-  transform: scale(0, 0) rotate(-45deg);
-  /* transition-property: transform;
-  transition-duration: 80ms;
-  transition-timing-function: linear; */
-  top: calc(6 * var(--px));
-  left: calc(3 * var(--px));
-  height: calc(7 * var(--px));
-  width: calc(18 * var(--px));
-  border-left: 2px solid var(--color-neutral-0);
-  border-bottom: 2px solid var(--color-neutral-0);
+.icon-backdrop {
+  background-color: var(--color-neutral-1);
+  border: 1px solid var(--color-neutral-2);
 }
-
-.checkbox:checked + .label .icon-square-tick {
-  transform: scale(1, 1) rotate(-45deg);
-}
-
-.container:hover .checkbox:checked + .label .icon-square-backdrop,
-.checkbox:checked + .label .icon-square-backdrop,
-:global(.with-focus-ring) .checkbox:checked:focus + .label .icon-square-backdrop {
-  background-color: var(--color-accent-1-light);
+.checkbox:checked + .label .icon-backdrop {
+  background-color: var(--color-accent-1);
   border-color: var(--color-accent-1-dark);
 }
 
+/* HOVER */
+.container:global(.--hover) .icon-backdrop,
+.container:hover .icon-backdrop {
+  top: -1px;
+  right: -1px;
+  bottom: -1px;
+  left: -1px;
+  border-color: var(--color-neutral-3);
+  border-width: 2px;
+}
+
+/* FOCUS */
+.container:global(.--focus) .icon-backdrop,
+:global(.with-focus-ring) .checkbox:focus + .label .icon-backdrop {
+  top: -1px;
+  right: -1px;
+  bottom: -1px;
+  left: -1px;
+  border-color: var(--color-neutral-3);
+  border-width: 2px;
+}
+:global(.with-focus-ring) .checkbox:checked:focus + .label .icon-backdrop {
+  border-color: var(--color-accent-1-dark);
+}
 .container:global(.--focus) .backdrop,
 :global(.with-focus-ring) .container:focus-within .backdrop {
   background-color: var(--color-neutral-2);
-  top: -1px;
-  bottom: -1px;
-  right: -1px;
-  left: -1px;
 }
 
+/* DISABLED */
 .checkbox:disabled + .label {
-  opacity: 0.25;
+  opacity: 0.3;
+}
+.container:hover .checkbox:disabled + .label .icon-backdrop {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-color: var(--color-neutral-2);
+  border-width: 1px;
+}
+.container:hover .checkbox:checked:disabled + .label .icon-backdrop {
+  border-color: var(--color-accent-1-dark);
 }
