--- a/src/ui/components/Controls/SwitchButton/styles.css
+++ b/src/ui/components/Controls/SwitchButton/styles.css
@@ -1,73 +1,87 @@
 @import 'assets/css/variables.css';
 
-.icon-container {
-  width: var(--lh-xl);
-  height: var(--lh-m);
-  display: inline-block;
-  vertical-align: top;
-  cursor: default;
-}
-.icon-container-backdrop {
-  background-color: var(--color-neutral-1);
-  border: 1px solid var(--color-neutral-2);
-  border-radius: 999em;
-}
-
-.icon-circle {
-  width: var(--lh-m);
-  height: var(--lh-m);
-  transform: translate(0, 0);
-  transition-property: transform;
-  transition-duration: 100ms;
-  transition-timing-function: linear;
-}
-
-.icon-circle-backdrop {
-  background-color: var(--color-neutral-0);
-  border: 1px solid var(--color-neutral-3);
-  border-radius: 50%;
-}
-
 .checkbox {
   position: absolute;
-  width: auto;
-  height: auto;
+  top: 0;
+  left: 0;
+  width: 1px;
+  height: 1px;
   opacity: 0;
 }
 
-.container:global(.--focus) .icon-circle-backdrop,
-.container:global(.--hover) .icon-circle-backdrop,
-.container:hover .checkbox:not(:disabled) + .label .icon-circle-backdrop,
-:global(.with-focus-ring) .checkbox:focus + .label .icon-circle-backdrop {
+.icon-container {
+  cursor: default;
+  width: var(--xl);
+  height: var(--m);
+  background-color: var(--color-neutral-1);
+  border: 1px solid var(--color-neutral-2);
+  border-radius: var(--radius-pill);
+}
+.icon {
   top: -1px;
-  bottom: -1px;
   left: -1px;
-  right: -1px;
-  border-width: 2px;
+  width: var(--m);
+  height: var(--m);
+  transition: transform 100ms ease-in-out;
+}
+.checkbox:checked + .label .icon-container {
+  background-color: var(--color-accent-1);
+  border: 1px solid var(--color-accent-1-dark);
+}
+.checkbox:checked + .label .icon {
+  transform: translateX(calc(var(--xl) - var(--m)));
 }
 
-.checkbox:checked + .label .icon-container-backdrop {
-  background-color: var(--color-accent-1-light);
-  border-color: var(--color-accent-1);
+.icon-backdrop {
+  border-radius: 50%;
+  background-color: var(--color-neutral-0);
+  border: 1px solid var(--color-neutral-2);
 }
-
-.checkbox:checked + .label .icon-circle-backdrop {
+.checkbox:checked + .label .icon-backdrop {
   border-color: var(--color-accent-1-dark);
 }
 
-.checkbox:checked + .label .icon-circle {
-  transform: translateX(calc(var(--lh-xl) - var(--lh-m)));
+/* HOVER */
+.container:global(.--hover) .icon-backdrop,
+.container:hover .icon-backdrop {
+  top: -1px;
+  right: -1px;
+  bottom: -1px;
+  left: -1px;
+  border-color: var(--color-neutral-3);
+  border-width: 2px;
 }
 
+/* FOCUS */
+.container:global(.--focus) .icon-backdrop,
+:global(.with-focus-ring) .checkbox:focus + .label .icon-backdrop {
+  top: -1px;
+  right: -1px;
+  bottom: -1px;
+  left: -1px;
+  border-color: var(--color-neutral-3);
+  border-width: 2px;
+}
+:global(.with-focus-ring) .checkbox:checked:focus + .label .icon-backdrop {
+  border-color: var(--color-accent-1-dark);
+}
 .container:global(.--focus) .backdrop,
 :global(.with-focus-ring) .container:focus-within .backdrop {
   background-color: var(--color-neutral-2);
-  top: -1px;
-  bottom: -1px;
-  right: -1px;
-  left: -1px;
 }
 
+/* DISABLED */
 .checkbox:disabled + .label {
-  opacity: 0.25;
+  opacity: 0.3;
+}
+.container:hover .checkbox:disabled + .label .icon-backdrop {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-color: var(--color-neutral-2);
+  border-width: 1px;
+}
+.container:hover .checkbox:checked:disabled + .label .icon-backdrop {
+  border-color: var(--color-accent-1-dark);
 }
