--- a/src/assets/css/modules/decoration.css
+++ b/src/assets/css/modules/decoration.css
@@ -12,10 +12,10 @@
 
 :global .bg-grid {
   background-size: 8px 8px;
-  background-image: linear-gradient(to right, transparent 7px, color(var(--color-accent-1-light) a(20%)) 7px),
-    linear-gradient(to bottom, transparent 7px, color(var(--color-accent-1-light) a(20%)) 7px);
+  background-image: linear-gradient(to right, transparent 7px, color-mod(var(--color-accent-1-light) alpha(20%)) 7px),
+    linear-gradient(to bottom, transparent 7px, color-mod(var(--color-accent-1-light) alpha(20%)) 7px);
 }
 
 :global .bg-debug {
-  background-color: color(var(--color-accent-1-light) a(20%));
+  background-color: color-mod(var(--color-accent-1-light) alpha(20%));
 }
