--- a/src/ui/components/Controls/TextField/styles.css
+++ b/src/ui/components/Controls/TextField/styles.css
@@ -1,9 +1,7 @@
-@import 'assets/css/variables.css';
-
 .backdrop {
   background-color: var(--color-neutral-0);
   border: 1px solid currentColor;
-  border-radius: var(--radius-input);
+  border-radius: inherit;
 }
 
 :global(.--focus) input + .backdrop,
