--- a/src/ui/components/Controls/Link/styles.css
+++ b/src/ui/components/Controls/Link/styles.css
@@ -1,14 +1,12 @@
-@import 'assets/css/variables.css';
-
 .container {
   color: inherit;
   text-decoration: none;
-  background-image: linear-gradient(to top, color(var(--color-neutral-5) a(30%)) 1px, transparent 1px);
+  background-image: linear-gradient(to top, color-mod(var(--color-neutral-5) alpha(30%)) 1px, transparent 1px);
 }
 
 .container:hover,
 .container:global(.--hover) {
-  background-image: linear-gradient(to top, color(var(--color-neutral-5) a(100%)) 1px, transparent 1px);
+  background-image: linear-gradient(to top, color-mod(var(--color-neutral-5) alpha(100%)) 1px, transparent 1px);
 }
 
 .container:focus {
@@ -18,5 +16,5 @@
 :global(.with-focus-ring) .container:focus,
 .container:global(.--focus) {
   background-color: var(--color-neutral-2);
-  background-image: linear-gradient(to top, color(var(--color-neutral-5) a(100%)) 1px, transparent 1px);
+  background-image: linear-gradient(to top, color-mod(var(--color-neutral-5) alpha(100%)) 1px, transparent 1px);
 }
