--- a/src/ui/views/Playground/styles.css
+++ b/src/ui/views/Playground/styles.css
@@ -1,21 +1,26 @@
 .container {
   display: grid;
-  min-width: 100vw;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   grid-template-rows: auto 1fr;
-  grid-template-columns: 256px 1fr;
-  grid-gap: var(--m);
+  grid-template-columns: auto 1fr;
 }
 
 .heading {
-  grid-row: 1;
-  grid-column: 1/3;
+  grid-row: 1 / span 1;
+  grid-column: 1 / -1;
   border-bottom: 1px solid var(--color-neutral-2);
 }
 
-.grid {
-  top: calc(-1 * var(--m));
-  bottom: 0;
-  right: 0;
-  left: calc(-1 * var(--m));
+.sidebar {
+  width: 256px;
+  background-color: var(--color-neutral-1);
+  grid-row: 2 / span 1;
+  grid-column: 1 / span 1;
+}
+
+.content {
+  position: relative;
+  grid-row: 2 / span 1;
+  grid-column: 2 / -1;
 }
