--- a/src/assets/css/modules/html-body-reset.css
+++ b/src/assets/css/modules/html-body-reset.css
@@ -6,6 +6,6 @@ body {
   height: 100%;
   color: var(--color-neutral-5);
   font-size: var(--fs-m);
-  font-family: var(--ff-system);
+  font-family: var(--ff-body);
   line-height: var(--m);
 }
