--- a/src/assets/css/variables.css
+++ b/src/assets/css/variables.css
@@ -1,6 +1,6 @@
 :root {
   /* Font-families */
-  --ff-system: BlinkMacSystemFont, -apple-system, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+  --ff-body: BlinkMacSystemFont, -apple-system, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
     'Helvetica Neue', sans-serif;
   --ff-heading: BlinkMacSystemFont, -apple-system, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
     'Helvetica Neue', sans-serif;
@@ -22,6 +22,7 @@
   --fs-s: 0.875rem; /* 14 */
 
   --m: calc(1.125rem + 0.5859375vw); /* 24 */
+  --lh-m: 1.5rem; /* 24 */
   --fs-m: 1rem; /* 16 */
 
   --l: calc(1.25rem + 1.171875vw); /* 32 */
