--- a/src/assets/css/modules/height.css
+++ b/src/assets/css/modules/height.css
@@ -21,3 +21,11 @@
 :global .h-xxl {
   height: var(--xxl);
 }
+
+:global .h-100 {
+  height: 100%;
+}
+
+:global .minvh-100 {
+  min-height: 100vh;
+}
